--- a/task-7-convert-decimalnumber-to-roman-number/index.html
+++ b/task-7-convert-decimalnumber-to-roman-number/index.html
@@ -25,7 +25,7 @@
                 <input type="text" id="decimal">
             </div>
             <div id="cdn">
-                <button class="convert-decimal-number">convert number into decimal</button>
+                <button class="convert-decimal-number">convert roman into number</button>
             </div>
             <div id="displaying-number">
                 <input id="resulttwo"></input>
