--- a/task-2d breakout/index.html
+++ b/task-2d breakout/index.html
@@ -14,7 +14,7 @@
             <a href="#" id="start">Start</a>
             <a href="#" id="setting">Setting</a>
             <!-- <a href="#" id="highscore">HighScore</a> -->
-            <a href="C:\Users\S A N T H\Desktop\Task_\task-01\task-2d breakout\createdetails.html">Create Details</a>
+            <a href="./createdetails.html">Create Details</a>
         </div>
         <div class="settinginfo">
             <div class="overlay">
