--- a/task-2d breakout/createdetails.html
+++ b/task-2d breakout/createdetails.html
@@ -59,7 +59,7 @@ a:hover::before{
     <div class="container">
         <img src="./source/logo.jpg" alt="">
         <h3 class="creatorname"><span style="color: rgb(255, 102, 0);">This game is created by:</span>SANTH  B.E</h3>
-        <a href="C:\Users\S A N T H\Desktop\Task_\task-01\task-2d breakout\index.html">back</a>
+        <a href="./index.html">back</a>
     </div>
     
 </body>
