--- a/zoho/index.html
+++ b/zoho/index.html
@@ -17,13 +17,13 @@
         <nav>
             <ul class="nav-ul">
                 <li>
-                    <span class="products">Products <span><i class="fa-solid fa-angle-down"></i></span></span>
+                    <span class="products">Products <div style="display: inline-block;"><i class="fa-solid fa-angle-down"></i></div></span>
                 </li>
                 <li>
                     <a href="#" class="customers">Customers</a>
                 </li>
                 <li>
-                    <span class="company">Company <span><i class="fa-solid fa-angle-down"></i></span></span>
+                    <span class="company">Company <div style="display: inline-block;"><i class="fa-solid fa-angle-down"></i></div></span>
                     <div class="dropdownlist">
                         <ul>
                             <li><a href="#" class="an">About us</a></li>
