--- a/zoho/index.html
+++ b/zoho/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoho | Cloud Software Suite for Businesses</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./source/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js" defer></script>
 
@@ -70,7 +71,29 @@
                     <span class="glowdot"></span>
                     <span class="gloweffect"></span>
                 </li>
-                <li><span><i class="fa-solid fa-globe"></i></span>EN</li>
+                <li class="language">
+                    <span><i class="fa-solid fa-globe"></i></span>EN
+                    <div class="select-container">
+                        <div class="language-1">
+                            <p>English</p>
+                            <p>Português (Brasil)</p>
+                            <p>Français</p>
+                            <p>Bahasa Indonesia</p>
+                            <p> ภาษาไทย</p>
+                            <p>简体中文</p>
+                            <p>עברית</p>
+                        </div>
+                        <div class="language-2">
+                            <p>Español</p>
+                            <p>Deutsch</p>
+                            <p>Nederlands</p>
+                            <p>العربية</p>
+                            <p>日本語</p>
+                            <p>Tiếng Việt</p>
+                            <p>繁体中文</p>
+                        </div>
+                    </div>
+                </li>
                 <li><a href="#">Sign In</a></li>
                 <li class="signup"><a href="#" class="sign">Sign Up</a></li>
 
