--- a/slider/index.html
+++ b/slider/index.html
@@ -8,6 +8,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="container1">
+       <h2 class="mode">LIGHT MODE</h2>
+        <label for="toggle-btn" id="label-1"></label>
+
+        <input type="checkbox" id="toggle-btn">
+    
+</div>
     <div class="container">
         <div class="wrapper">
             <img src="./source/2150712310.jpg" alt="" draggable="false">
